@@ -6,6 +6,8 @@ Changes since 20041113a:
 - Bugfix: get rid of cosmetic bug "Groupinfo file damaged, ignoring line: 18"
 - Change: when complaining about damaged groupinfo file, print the line
   number and encapsulate the line in double quotes.
+- Change: More useful logging when getting the range of articles in a
+  group, now includes the server name.
 
 20041113a: Changes since 20041007a:
 - Speedup: the active file now has a header line that contains the number
